--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,17 @@
             "type": "java",
             "name": "Launch JavaFXApplication1",
             "request": "launch",
+            "mainClass": "JavaFXApplication1",
+            "projectName": "BrowserLord_32906e04",
+            "vmArgs": "--module-path \"javafx-sdk-19/lib\" --add-modules javafx.controls,javafx.fxml,javafx.web"
+        },
+        {
+            "type": "java",
+            "name": "Launch JavaFXApplication1",
+            "request": "launch",
             "mainClass": "javafxapplication1.JavaFXApplication1",
             "projectName": "BrowserLord_e6d8c00",
             "vmArgs": "--module-path \"javafx-sdk-19/lib\" --add-modules javafx.controls,javafx.fxml,javafx.web"
-
         },
         {
             "type": "java",
